tests/NormalTests/paczka1/fuzzy1/48630728.err
Error in line 8: TfSHe A970 55,1
Error in line 15: cPX S533 67,7
